--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en-US">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYY5530LH9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LYY5530LH9');
+</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -10,10 +19,10 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/snow-rider-2d1.png">
-    <title>Snow Rider 2D - Snow Rider 2D</title>
+    <title>Snow Rider 2D | Play Snow Rider Game</title>
     <meta name="keywords" content="snow rider 2d">
     <meta name="news_keywords" content="snow rider 2d">
-    <meta name="description" content="Snow Rider 2D - Snow Rider 2D">
+    <meta name="description" content="Play Snow Rider 2D unblocked! Slide down snowy slopes, dodge obstacles, collect coins, and race for high scores in this fast-paced, addictive winter game online.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,7 +76,7 @@
                 <nav class="navigation">
                     <ul>
                                                     <li>
-                                <a class="menu-link" href="/santa-tracker">
+                                <a class="menu-link" href="/santa-tracker-snow-rider">
                                     <span class="text-menu-link">Santa Tracker</span>
                                 </a>
                             </li>
@@ -281,4 +290,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
