--- a/snow-rider-3d.html
+++ b/snow-rider-3d.html
@@ -2,6 +2,15 @@
 <html lang="en-US">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYY5530LH9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LYY5530LH9');
+</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -13,7 +22,7 @@
     <title>Snow Rider 3D - Snow Rider 2D</title>
     <meta name="keywords" content="snow rider 3d">
     <meta name="news_keywords" content="snow rider 3d">
-    <meta name="description" content="Snow Rider 3D - Snow Rider 2D">
+    <meta name="description" content="Play Snow Rider 3D online for free! Ski down thrilling snowy slopes, perform stunts, dodge obstacles, and enjoy smooth 3D gameplay on desktop & mobile.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,7 +76,7 @@
                 <nav class="navigation">
                     <ul>
                                                     <li>
-                                <a class="menu-link" href="/santa-tracker">
+                                <a class="menu-link" href="/santa-tracker-snow-rider">
                                     <span class="text-menu-link">Santa Tracker</span>
                                 </a>
                             </li>
@@ -238,4 +247,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
