--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <li>Travel as far as possible without crashing</li>
 </ul>
 <p>Because the game is <strong>fully unblocked</strong>, you can enjoy <strong>Snow Rider 2D unblocked</strong> anywhere &mdash; at school, work, or home.</p>
-<p><img src="http://duyengithub.comrs/imgs/snow-rider-2d.png" alt="Snow Rider 2D" width="512" /></p>
+<p><img src="https://taproad.io/data/image/snow-rider-2d.png" alt="Snow Rider 2D" width="512" /></p>
 <h2>Why Players Love Snow Rider 2D</h2>
 <ul>
 <li><strong>Clean, classic 2D visuals</strong>: Easy to see, easy to react, ideal for unblocked gameplay sessions.</li>
@@ -292,3 +292,4 @@
 </body>
 
 </html>
+
